--- a/app/src/main/res/layout/card_menuitem.xml
+++ b/app/src/main/res/layout/card_menuitem.xml
@@ -12,7 +12,11 @@
         card_view:contentPadding="4dp"
         card_view:cardCornerRadius="4dp"
         card_view:cardElevation="4dp"
-        android:layout_margin="4dp">
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        card_view:cardBackgroundColor="@color/colorMainElement">
 
         <LinearLayout
             android:layout_marginLeft="4dp"
@@ -26,34 +30,46 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Ma 4.5."
-                style="@style/TextAppearance.AppCompat.Headline"/>
+                style="@style/TextAppearance.AppCompat.Headline"
+                android:textColor="@color/colorWhitesmoke"/>
 
         <LinearLayout
-            android:layout_marginLeft="8dp"
+            android:layout_marginLeft="4dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textview_saladname"
+                android:id="@+id/textview_firstFood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Salaattipöytä"
-                style="@style/TextAppearance.AppCompat.Body2"/>
+                android:text="Eka"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="@color/colorWhitesmoke"/>
 
             <TextView
-                android:id="@+id/textview_foodname"
+                android:id="@+id/textview_secondFood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Kotiruoka"
-                style="@style/TextAppearance.AppCompat.Body2"/>
+                android:text="Toka"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="@color/colorWhitesmoke"/>
 
             <TextView
-                android:id="@+id/textview_soupname"
+                android:id="@+id/textview_thirdFood"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Keitto"
-                style="@style/TextAppearance.AppCompat.Body2"/>
+                android:text="Kol"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="@color/colorWhitesmoke"/>
+
+            <TextView
+                android:id="@+id/textview_fourthFood"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Nel"
+                style="@style/TextAppearance.AppCompat.Body2"
+                android:textColor="@color/colorWhitesmoke"/>
 
         </LinearLayout>
 
