--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,5 @@
 
     <color name="colorWhitesmoke">#f5f5f5</color>
     <color name="colorMainBackground">#121212</color>
-    <color name="colorMainElement">#1E1E1E</color>
+    <color name="colorMainElement">#2C2C2C</color>
 </resources>
